--- a/src/Style/base/_base.scss
+++ b/src/Style/base/_base.scss
@@ -1,3 +1,7 @@
+body
+{
+    overflow-x: hidden;
+}
 
 
 .pointer
@@ -13,3 +17,9 @@
         border-bottom: 1px solid black;
     }
 }
+
+.Dpadding
+{
+    padding: 0% !important;
+}
+
