--- a/src/Style/base/_base.scss
+++ b/src/Style/base/_base.scss
@@ -1,6 +1,7 @@
 body
 {
     overflow-x: hidden;
+    height: 100vh;
 }
 
 
@@ -23,3 +24,7 @@ body
     padding: 0% !important;
 }
 
+.rem3
+{
+    margin-top: 3rem;
+}
